v11/fixtures/ast/errors/or_else_handler/source.able
do {
  raise "boom"
}! or {
  err =>
  "handled";
};
